# ai-ml-project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
project1_mlp_feature_clustering/: README.md
project1_mlp_feature_clustering/src/p1/: __init__.py  datasets.py
project1_mlp_feature_clustering/src/p1/clustering/: __init__.py  choose_k.py  kmeans_numpy.py
project1_mlp_feature_clustering/src/p1/experiments/: __init__.py  run_all.py
project1_mlp_feature_clustering/src/p1/features/: __init__.py  python_features.py  weka_bridge.py
project1_mlp_feature_clustering/src/p1/models/: __init__.py  mlp_numpy.py  optimizers.py  train_mlp.py
project1_mlp_feature_clustering/src/reports/results/: choose_k_results.csv  choose_k_results.json  clustering_metrics.json  mlp_history_breast_cancer.json  mlp_history_iris.json  mlp_metrics_breast_cancer.json  (+1 more)
project1_mlp_feature_clustering/tests/: test_kmeans_smoke.py  test_mlp_numpy_smoke.py
project2_aerial_image_clustering/: README.md
project2_aerial_image_clustering/src/p2/: __init__.py  clusterers.py  datasets.py  evaluation.py  features.py  visualize.py
project2_aerial_image_clustering/tests/: test_pipeline_smoke.py
project3_rl_gymnasium_bot/: README.md
project3_rl_gymnasium_bot/src/p3/: __init__.py  eval_dqn.py  plot_rewards.py  record_dqn.py  train_dqn.py
project3_rl_gymnasium_bot/tests/: test_dqn_smoke.py
shared/src/shared/: __init__.py  clustering_validity.py  config.py  io.py  metrics.py  plotting.py  screenshot_pack.py  seed.py  tsne.py
shared/tests/: test_imports.py
(+4 files in other folders)
