[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-ai-lab"
version = "0.1.0"
description = "AI/ML projects: MLP clustering, aerial image clustering, and RL bot"
authors = [{name = "SomnathSaha67"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "seaborn>=0.12.0",
    "tqdm>=4.62.0",
    "gymnasium>=0.27.0",
    "imageio>=2.15.0",
    "pillow>=9.0.0",
    "torch>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["shared.src.shared", "shared.tests", "project1_mlp_feature_clustering.src.p1", "project2_aerial_image_clustering.src.p2", "project3_rl_gymnasium_bot.src.p3"]

[tool.pytest.ini_options]
testpaths = ["shared/tests", "project1_mlp_feature_clustering/tests", "project2_aerial_image_clustering/tests", "project3_rl_gymnasium_bot/tests"]
python_files = "test_*.py"

[tool.setuptools.package-data]
"shared.src.shared" = ["*.py"]
